--- a/agro-tech/src/components/services/service.css
+++ b/agro-tech/src/components/services/service.css
@@ -112,7 +112,6 @@
     padding: 14px 10px;
     width: 200px;
     outline: none;
-    color: white;
     border-radius: 24px;
     transition: 0.25s;
 }
